<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RadioButtonDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="thongtincanhan">Thông tin cá nhân</string>
    
    <string name="hoten">Họ tên</string>
    <string name="cmnd">CMND</string>
    <string name="bangcap">Bằng cấp</string>
    <string name="trungcap">Trung cấp</string>
    <string name="daihoc">Đại học</string>
    <string name="caodang">Cao đẳng</string>
    <string name="sothich">Sở thích</string>
    <string name="docbao">Đọc báo</string>
    <string name="docsach">Đọc sách</string>
    <string name="doccoding">Đọc coding</string>
    <string name="thongtinbosung">Thông tin bổ sung</string>
    <string name="spro">Senior Programer</string>
    <string name="ssal">Senior Saler</string>
    <string name="goithongtin">Gởi thông tin</string>
    

</resources>
