<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tientm.com.radiobuttondemo.MainActivity" >

    <TextView
        android:id="@+id/txtThongTinCaNhan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0099FF"
        android:gravity="center"
        android:text="@+string/thongtincanhan"
        android:textColor="#fff"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtHoTen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hoten" />

        <EditText
            android:id="@+id/edtHoTen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtCMND"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cmnd" />

        <EditText
            android:id="@+id/edtCMND"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtBangCap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0099FF"
        android:gravity="center"
        android:text="@string/bangcap"
        android:textColor="#fff"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioGroup
            android:id="@+id/radgBangCap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.38"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radTrungCap"
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:checked="true"
                android:text="@string/trungcap"
                android:textSize="13sp" />

            <RadioButton
                android:id="@+id/radCaoDang"
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/caodang"
                android:textSize="13sp" />

            <RadioButton
                android:id="@+id/radDaiHoc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/daihoc"
                android:textSize="13sp" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.38" >
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/txtSoThich"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#0099FF"
        android:gravity="center"
        android:text="@string/sothich"
        android:textColor="#fff"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/chkDocSach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/docsach"
            android:textSize="13sp" />

        <CheckBox
            android:id="@+id/chkDocBao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/docbao"
            android:textSize="13sp" />

        <CheckBox
            android:id="@+id/chkCoding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doccoding"
            android:textSize="13sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtThongTinBoSung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0099FF"
        android:gravity="center"
        android:text="@string/thongtinbosung"
        android:textColor="#fff"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

    </RadioGroup>

    <EditText
        android:id="@+id/edtThongTinBoSung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnGoiThongTin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goithongtin" />

</LinearLayout>